# gpu_ctree

./: .gitignore  README.md  __init__.py  boston_housing_example.py  boston_housing_model.pkl  boston_housing_results.txt  example_usage.py  fix_gpu_environment.sh  gpu_ctree_boston_62083193.err  gpu_ctree_boston_62083193.out  run_boston_4gpus.sh  setup.py  setup_once.py  use_gpu_ctree.sh
examples/: __init__.py  basic_usage.py
gpu_ctree/: __init__.py  controls.py  core.py  exceptions.py  kernels.py  pyproject.toml  r_interface.py  utils.py  visualization.py
gpu_ctree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gpu_ctree/cuda/: __init__.py  kernels.py  utils.py
tests/: __init__.py  test_gpu_ctree.py
